Added header and footer

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap');
 
 $main-font: 'Mulish', sans-serif;
+$font-dark: #111;
+$font-highlight: #4A4FF2;
