--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,10 @@
 @use "fonts";
 
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
   font-family: fonts.$main-font;
 }
