--- a/styles/_title_section.scss
+++ b/styles/_title_section.scss
@@ -28,11 +28,13 @@
     background-color: fonts.$font-dark;
     opacity: 0.5;
     margin: 0;
+    border: 0;
   }
 
   p {
     opacity: 0.6;
     margin: 9px 0 0 0;
+    font-style: italic;
   }
 
   .highlight {
