--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   font-family: fonts.$main-font;
+  color: fonts.$font-dark;
 }
 
 main {
@@ -18,3 +19,5 @@ main {
 @import "footer";
 @import "title_section";
 @import "content_grid";
+@import "group";
+@import "awards";
