--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1,8 +1,115 @@
-@use 'fonts';
+@use "fonts";
 
-body {
-    font-family: fonts.$main-font;
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
-@import 'header';
-@import 'footer';
+body {
+  font-family: fonts.$main-font;
+  color: fonts.$font-dark;
+}
+
+main {
+  width: 80vw;
+  margin: 0 auto;
+}
+
+.title {
+  margin-top: 110px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__desc {
+    width: 635px;
+
+    h1 {
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 55px; /* 137.5% */
+    }
+
+    p {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 26px; /* 162.5% */
+      opacity: 0.8;
+    }
+  }
+
+  &__info {
+    width: 275px;
+
+    hr {
+      opacity: 0.3;
+      background: #979797;
+      height: 1px;
+      margin: 0;
+      border: 0;
+    }
+
+    h2 {
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      opacity: 0.5;
+    }
+
+    p {
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+}
+
+.content {
+  margin-top: 60px;
+
+  &__hero__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__img__gallery {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+
+    img {
+      width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  p {
+    margin-top: 45px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    opacity: 0.8;
+  }
+}
+
+@import "header";
+@import "footer";
