--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -1,8 +1,86 @@
-@use 'fonts';
+@use "fonts";
 
-body {
-    font-family: fonts.$main-font;
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
-@import 'header';
-@import 'footer';
+body {
+  font-family: fonts.$main-font;
+}
+
+main {
+  width: 80vw;
+  margin: 0 auto;
+}
+
+.contact {
+  margin-top: 110px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+
+  h1 {
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 55px; /* 137.5% */
+  }
+
+  p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    opacity: 0.8;
+    margin: 0;
+  }
+
+  &__info {
+    width: 475px;
+  }
+
+  &__form {
+    width: 475px;
+
+    hr {
+      border: 1px solid #979797;
+      opacity: 0.3;
+      background: #d8d8d8;
+      margin-bottom: 45px;
+    }
+
+    input[type="text"],
+    [type="email"] {
+      width: 100%;
+      border: none;
+      box-sizing: border-box;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      opacity: 0.6;
+      margin-bottom: 15px;
+    }
+
+    input[type="submit"] {
+      margin-top: -8px;
+      width: 125px;
+      height: 50px;
+      background: #4a4ff2;
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
+  }
+}
+
+img {
+  margin-top: 120px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@import "header";
+@import "footer";
